# change_yew_route_from_js

./: Cargo.toml  LICENSE  README.md  index.html
src/: main.rs
