[package]
name = "change-yew-route-from-js"
version = "0.1.0"
authors = ["jq170727 <jq170727@mailforce.net>"]
description = "Example of changing Yew route from javascript"
license = "MIT"
edition = "2021"
readme = "./README.md"
repository = "https://github.com/jq170727/change_yew_route_from_js"
homepage = "https://github.com/jq170727/change_yew_route_from_js"

[dependencies]
custom-elements = "0.2.0"
gloo = "0.8.0"
gloo-console = "0.2.3"
gloo-events = "0.1.2"
js-sys = "0.3.60"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "Window",
  'Document',
  'CustomEvent',
]
